--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,3 +57,10 @@
 
   </mat-sidenav-content>
 </mat-sidenav-container>
+
+<mat-card class="my-alternate-theme">
+  My Alternate Themes:
+  <button mat-raised-button color="primary">Primary</button>
+  <button mat-raised-button color="accent">Accent</button>
+  <button mat-raised-button color="warn">Warning</button>
+</mat-card>
