--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,27 @@
+// styles.scss
+
+// Custom theming for Angular Material
+@import '~@angular/material/theming';
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+@import './theme.scss';
+@import './custom-components-theme.scss';
+
+@include angular-material-theme($custom-theme-theme);
+@include custom-components-theme($custom-theme-theme);
+
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
