- Create sideNav custom component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+
+<app-sidenav [themeColor]="'primary'">
+  Main Content
+</app-sidenav>
+
 <!-- Toolbar -->
 <mat-toolbar color="primary" class="header">
   <div>Material Theme</div>
