- Create custom dialog component - Create dialog component theme scss - Dialog opening management in app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 
-<app-sidenav [themeColor]="'primary'">
-  Main Content
+<app-sidenav [themeColor]="themeColor">
+  Main Content <br/>
+  <button mat-raised-button [color]="themeColor" (click)="openDialog()">Open dialog</button>
 </app-sidenav>
 
