--- a/src/custom-components-theme.scss
+++ b/src/custom-components-theme.scss
@@ -2,8 +2,10 @@
 
 // import custom components themes
 @import './app/shared/components/sidenav/sidenav.component.scss-theme.scss';
+@import './app/shared/components/dialog/dialog.component.scss-theme.scss';
 // you only have to add additional components here (instead of in every theme class)
 @mixin custom-components-theme($theme) {
 
   @include sidenav-component-theme($theme);
+  @include dialog-component-theme($theme);
 }
