--- a/src/theme.scss
+++ b/src/theme.scss
@@ -16,4 +16,11 @@ $custom-theme-theme: mat-light-theme($custom-theme-primary, $custom-theme-accent
 
 // $custom-theme-theme: mat-dark-theme($custom-theme-primary, $custom-theme-accent, $custom-theme-warn);
 
-
+// Theme for notifications / snackbar
+$notifications-theme: (
+  default: #fff,
+  info: mat-color(mat-palette($mat-blue), 400),
+  success: mat-color(mat-palette($mat-green), 400),
+  warning: mat-color(mat-palette($mat-yellow), 400),
+  error: mat-color(mat-palette($mat-red), 400),
+);
