--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,11 @@
 <app-sidenav [themeColor]="themeColor">
   Main Content <br/>
   <button mat-raised-button [color]="themeColor" (click)="openDialog()">Open dialog</button>
+
+  <br/>
+
+  <button mat-raised-button [color]="themeColor" (click)="openNotification()">Open notification</button>
+
+
 </app-sidenav>
 
