--- a/src/app/shared/components/sidenav/sidenav.component.html
+++ b/src/app/shared/components/sidenav/sidenav.component.html
@@ -1,9 +1,55 @@
-<mat-toolbar [color]="themeColor">
-  Toolbar
-</mat-toolbar>
-<mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="side" opened [attr.color]="themeColor"> Sidenav content</mat-sidenav>
+
+<mat-sidenav-container>
+  <!-- Sidenav -->
+  <mat-sidenav #sidenav [mode]="isBiggerScreen() ? 'over' : 'side'" [(opened)]="opened" [fixedInViewport]="true"
+    [fixedTopGap]>
+    <mat-nav-list>
+      <a mat-list-item>
+        <mat-icon>dashboard</mat-icon> Dashboard
+      </a>
+      <a mat-list-item>
+        <mat-icon>person</mat-icon> User Profile
+      </a>
+      <a mat-list-item>
+        <mat-icon>content_paste</mat-icon> Table List
+      </a>
+      <a mat-list-item>
+        <mat-icon>library_books</mat-icon> Typography
+      </a>
+      <a mat-list-item>
+        <mat-icon>location_on</mat-icon> Maps
+      </a>
+      <a mat-list-item>
+        <mat-icon>calendar_today</mat-icon> Calendar
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Main content -->
   <mat-sidenav-content>
-    <ng-content></ng-content>
+
+    <!-- Applying the mat-tyography class adds styles for native elements. -->
+    <section class="mat-typography title-group">
+      <h1>Heading Goes Here</h1>
+      <mat-divider></mat-divider>
+    </section>
+
+    <!-- Angular material cards -->
+    <div class="productCards">
+      <mat-grid-list cols="4" rowHeight="200px">
+        <mat-grid-tile [colspan]="3" [rowspan]="1">
+          <button mat-raised-button [color]="themeColor" (click)="openDialog()">Open dialog</button>
+          <br/>
+          <button mat-raised-button [color]="themeColor" (click)="openNotification()">Open notification</button>
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="2">2
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="1" [rowspan]="1">3
+        </mat-grid-tile>
+        <mat-grid-tile [colspan]="2" [rowspan]="1">4
+        </mat-grid-tile>
+      </mat-grid-list>
+    </div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
