- Add light and dark css classes in style css

--- a/src/app/shared/services/notification.scss-theme.scss
+++ b/src/app/shared/services/notification.scss-theme.scss
@@ -34,6 +34,8 @@
 
   .info-notification-overlay {
     border-left-color: $info-color;
+    background: #fff;
+    color: $info-color;
 
     &::before {
       content: "\e88e  ";
