- Create sidenav service to manage sidenav toogle state - Implement sidenav service in sidenav component and navbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-navbar (toggleSidenav)="openSidenav()" [themeColor]="themeColor"></app-navbar>
+<app-navbar  [themeColor]="themeColor"></app-navbar>
 
-<app-sidenav [themeColor]="themeColor" [(opened)]="isSidenavOpened" >
+<app-sidenav [themeColor]="themeColor">
 
 </app-sidenav>
 
