--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,9 +1,17 @@
 .nav {
 
   &-header {
+    display: flex;
+    align-items: center;
 
   }
+
   &-tool-items {
+    display: flex;
+
+    .mat-icon {
+      cursor: pointer;
+    }
 
   }
 
