--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <!-- Navbar -->
-<mat-toolbar [color]="themeColor" class="header">
-  <div>Material Theme</div>
-  <span class="nav-tool-items">
+<mat-toolbar [color]="themeColor" class="nav-header">
+  <div class="nav-tool-items">
     <mat-icon (click)="onToggleSideMenu()" class="hamburger">menu</mat-icon>
-  </span>
+  </div>
 </mat-toolbar>
