- Create theming service - Add switch button (theme) in navbar component

--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -7,11 +7,10 @@
   }
 
   &-tool-items {
+    width: 100%;
     display: flex;
+    justify-content: space-between;
 
-    .mat-icon {
-      cursor: pointer;
-    }
 
   }
 
