--- a/src/theme.scss
+++ b/src/theme.scss
@@ -6,23 +6,22 @@
 // Light theme
 // Available color palettes: https://material.io/design/color/
 $light-primary: mat-palette($mat-blue);
-$light-accent: mat-palette($mat-pink, 100, 500, A100);
+$light-accent: mat-palette($mat-pink, A200, A100, A400);
 // Warn palette is optional ( default to red)
-$light-warn: mat-palette($mat-lime);
+$light-warn: mat-palette($mat-deep-orange, A400, A200, A700);
 // Create theme object (a Sass map containing all of the palettes).
 $light-theme: mat-light-theme($light-primary, $light-accent, $light-warn);
 
 
 // Dark Theme
 $dark-primary: mat-palette($mat-blue-grey);
-$dark-accent: mat-palette($mat-amber, A200, A100, A400);
+$dark-accent: mat-palette($mat-brown, A200, A100, A400);
 $dark-warn: mat-palette($mat-deep-orange);
 $dark-theme: mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 
 // Theme for notifications / snackbar
-$notifications-theme: (
-  default: #fff,
+$notifications-theme: (default: #fff,
   info: mat-color(mat-palette($mat-blue), 400),
   success: mat-color(mat-palette($mat-green), 400),
   warning: mat-color(mat-palette($mat-yellow), 400),
